--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <script src="utils.js"></script>
   <script src="point.js"></script>
+  <script src="seed.js"></script>
   <script src="voronoi.js"></script>
   <script src="main.js"></script>
 </body>
